# GraphNotes

./: CLAUDE.md  README.md  graphnotes-project-brief.md  graphnotes-ux-specification.md  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vite.config.ts  vitest.config.ts
.claude/agents/: e2e-test-runner.md
docs/: EDITOR_ISSUES.md  TESTING.md  USER_MANUAL.md
e2e/: editor-enter-key.spec.ts  editor-note-switching.spec.ts  editor.spec.ts  graph.spec.ts  human-typing.spec.ts  keyboard-shortcuts.spec.ts  navigation.spec.ts  settings.spec.ts  sidebar.spec.ts  supertag-lifecycle.spec.ts  supertags.spec.ts  ui-features.spec.ts  vault.spec.ts
e2e/fixtures/: test-fixtures.ts
e2e/utils/: tauri-mocks.ts
notes/: core-concepts.md  markdown-guide.md  welcome.md
notes/.graphnotes/: config.json
playwright-report/: index.html
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: files.rs  mod.rs  search.rs
src/components/Editor/: Editor.tsx  EditorPlaceholder.tsx  EditorToolbar.tsx  FindInNote.tsx  PropertiesPanel.tsx  WikilinkSuggestion.tsx  editor.css
src/components/Graph/: GraphControls.tsx  GraphView.tsx  NodeStyles.ts  NoteNode.tsx  (+4 more)
src/hooks/: useDailyNote.ts  useGraph.ts  useKeyboardShortcuts.ts  useNotes.ts  usePeerSync.ts  useSearch.ts  useSync.ts  useTheme.ts  useVaultLoader.ts  useVirtualList.ts
src/stores/: graphStore.ts  noteStore.ts  settingsStore.ts  superTagStore.ts  uiStore.ts
src/styles/: globals.css
(+65 files in other folders)
